# 2024-microcontroller-demo

./: Cargo.toml  README.md  justfile  thingy.txt
.cargo/: config.toml
src/: main.rs  msa301.rs
